--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>SeheeKim's Resume</title>
+  <title>SeheeKim's Transcript</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src=https://github.com/SeheeKim618/transcript/raw/main/SK_Transcript.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
