--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>SeheeKim's Transcript</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src=https://github.com/SeheeKim618/transcript/raw/main/SK_Transcript.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <a href="pdfs/SK_Transcript.pdf" class="image fit"><img src="images/marr_pic.jpg" alt=""></a>
   </body>
-</html>
+</html>                                                                     
